lazy-attribute/test/03-unsupported-args.stderr
error: Arguments are not supported on #[lazy] functions
  --> test/03-unsupported-args.rs:13:8
   |
13 | fn foo(nope: u32) -> i32 {
   |        ^^^^^^^^^

error[E0425]: cannot find function `foo` in this scope
 --> test/03-unsupported-args.rs:8:20
  |
8 |     println!("{}", foo());
  |                    ^^^ not found in this scope

error[E0425]: cannot find function `foo` in this scope
 --> test/03-unsupported-args.rs:9:20
  |
9 |     println!("{}", foo());
  |                    ^^^ not found in this scope
